# ce-ocel-material-flow-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/: main.py  node_positions.json
src/disassembly_ocel/: __init__.py  base.py  car.py  ocel.py  visualization.py
