[project]
name = "disassembly-ocel"
version = "0.1.0"
description = "Python source code for the corresponding disassembly OCEL publication"
authors = [
    {name = "Daniel Piendl", email = "daniel.piendl@iwb.tum.de"},
    {name = "Patrick Jordan", email = "patrick.jordan@iwb.tum.de"},
]

requires-python = ">=3.11"
readme = "readme.md"
license = {text = "CC BY-NC 4.0 (Attribution-NonCommercial 4.0 International)"}
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "matplotlib>=3.10.3",
    "dash>=3.0.4",
    "dash-cytoscape>=1.0.2"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src"]

[tool.black]
line-length = 119
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "tests",
]
forced_separate = [
    "tests",
]
line_length = 119

[tool.flake8]
max-line-length = 119
exclude = ".git, __pycache__, docs/source/conf.py, old, build, dist"
ignore = "E203, E266, E501, W503, W605"
select = "B, C, E, F, W, T4"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]
markers = ["slow: mark a test as slow"]
